--- a/automations/mqtt/calefaccio_menjador_turn_on.yaml
+++ b/automations/mqtt/calefaccio_menjador_turn_on.yaml
@@ -4,9 +4,6 @@ trigger:
 - payload: 'on'
   platform: mqtt
   topic: wifi/switch/calefaccions/menjador/set
-condition: 
-- condition: state
-  entity_id: switch.calefaccio_menjador 
-  state: 'off'
+condition: []
 action:
-- service: script.calefaccio_mejador_turn_on
+- service: script.calefaccio_mejador_turn_on_mqtt
