--- a/automations/heater/dormitori/turn_off.yaml
+++ b/automations/heater/dormitori/turn_off.yaml
@@ -1,8 +1,8 @@
-alias: 'Set menjador climate to 18 at night'
+alias: 'Climate dormitori - Turn off'
 initial_state: true
 trigger:
   - platform: time
     at: "09:00:00"
 action:
   - service: climate.turn_off
-    entity_id: climate.menjador
+    entity_id: climate.dormitori
