--- a/automations/heater/dormitori/turn_on.yaml
+++ b/automations/heater/dormitori/turn_on.yaml
@@ -1,19 +1,32 @@
-alias: 'Set menjador climate to 19 at afternoon'
+alias: 'Climate dormitori - Turn on'
 initial_state: true
 trigger:
-  - platform: time_pattern
-    minutes: "/5"
+  - platform: time
+    at: "22:00:00"
+  - platform: homeassistant
+    event: start
+  - platform: state
+    entity_id: media_player.tele
+    to: 'playing'
+  - platform: state
+    entity_id: light.encimera
+    to: 'on'
+  - platform: state
+    entity_id: light.entrada
+    to: 'on'
+  - platform: state
+    entity_id: light.mesa
+    to: 'on'
+  - platform: state
+    entity_id: light.sofa
+    to: 'on'
 condition:
   condition: and
   conditions:
-    - condition: sun
-      after: sunset
-      after_offset: "01:00:00"
-    - condition: state
-      entity_id: climate.menjador
-      state: "off"
     - condition: time
-      before: "22:59:00"
+      after: "22:00:00"
+    - condition: time
+      before: "23:00:00"
     - condition: numeric_state
       entity_id: sensor.exterior_temperature_mqtt
       below: 15
@@ -35,10 +48,6 @@ condition:
           entity_id: light.sofa
           state: 'on'
 action:
-  - service: climate.set_temperature
-    data:
-      entity_id: climate.menjador
-      temperature: 19
   - service: climate.turn_on
     data:
-      entity_id: climate.menjador
+      entity_id: climate.dormitori
