--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+random_seed
+
 .HA_VERSION
 www/community
 .virtualenv
@@ -51,3 +53,5 @@ tele-menjador.conf
 .storage/
 .spotify-token-cache
 core
+.gitsecret/keys/random_seed
+!*.secret
