--- a/automations/heater/dormitori/set_18-5_degrees.yaml
+++ b/automations/heater/dormitori/set_18-5_degrees.yaml
@@ -6,10 +6,10 @@ trigger:
   - platform: homeassistant
     event: start
 condition:
-  condition: or
+  condition: and
   conditions:
     - condition: time
-      after: "23:00:00"
+      after: "22:59:00"
     - condition: time
       before: "01:00:00"
 action:
