--- a/configuration.yaml
+++ b/configuration.yaml
@@ -178,6 +178,14 @@ camera: !include devices/cameras.yaml
 climate: !include devices/climates.yaml
 media_player: !include devices/media_players.yaml
 
+webostv:
+  host: !secret ip_tele_menjador
+  name: Tele
+  turn_on_action:
+    service: wake_on_lan.send_magic_packet
+    data:
+      mac: "A8-23-FE-27-CB-A5"
+
 # Other config
 
 scene: !include scenes.yaml
