--- a/lovelace/views/00_home_modern/panel.yaml
+++ b/lovelace/views/00_home_modern/panel.yaml
@@ -117,55 +117,45 @@
                 height: 30px !important;
                 width: 30px !important;
               }
-    - type: conditional
-      conditions:
-        - entity: input_text.selected_category
-          state: none
-      card:
-        type: conditional
-        conditions:
-          - entity: media_player.cuarto_de_estar
-            state_not: "off"
-        card:
-          type: 'custom:mini-media-player'
-          entity: media_player.cuarto_de_estar
-          artwork: none
-          hide:
-            power_state: false
-            source: true
-            volume: true
-          icon: 'mdi:google-home'
-          name: Google Home
+
+
+    
+
 
     - type: conditional
       conditions:
         - entity: input_text.selected_category
           state: none
       card:
-        type: conditional
-        conditions:
-          - entity: media_player.tele
-            state_not: "off"
-        card:
-          type: 'custom:mini-media-player'
-          entity: media_player.tele
-          artwork: none
-          hide:
-            power_state: false
-            source: true
-            volume: true
-          icon: 'mdi:television-classic'
-          name: Tele menjador
+        type: horizontal-stack
+        cards:
 
-    - type: conditional
-      conditions:
-        - entity: input_text.selected_category
-          state: none
-      card:
-        type: conditional
-        conditions:
-          - entity: light.entrada
-            state_not: "off"
-        card:
-          type: 'custom:bar-card'
-          entity: timer.llum_entrada_timeout
+          - type: conditional
+            conditions:
+              - entity: media_player.cuarto_de_estar
+                state_not: "off"
+            card:
+              type: 'custom:mini-media-player'
+              entity: media_player.cuarto_de_estar
+              artwork: none
+              hide:
+                power_state: false
+                source: true
+                volume: true
+              icon: 'mdi:google-home'
+              name: Google Home
+          - type: conditional
+            conditions:
+              - entity: media_player.tele
+                state_not: "off"
+            card:
+              type: 'custom:mini-media-player'
+              entity: media_player.tele
+              artwork: none
+              hide:
+                power_state: false
+                source: true
+                volume: true
+              icon: 'mdi:television-classic'
+              name: Tele menjador
+
