--- a/automations/sensors/light_kitchen/movement_triggered.yaml
+++ b/automations/sensors/light_kitchen/movement_triggered.yaml
@@ -1,4 +1,5 @@
 alias: Cuina - Encendre llum amb moviment
+initial_state: false
 trigger:
 - entity_id: binary_sensor.motion_kitchen 
   from: 'off'
