--- a/automations/home_modes/normal/mati.yaml
+++ b/automations/home_modes/normal/mati.yaml
@@ -1,5 +1,5 @@
 alias: 'Home Modes - Normal - At morning'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "06:30:00"
