--- a/automations/sensors/light_entrance/movement_cleared.yaml
+++ b/automations/sensors/light_entrance/movement_cleared.yaml
@@ -1,4 +1,5 @@
 alias: Entrada - Quan no hi hagi moviment, activar timer
+initial_state: false
 trigger:
 - entity_id: binary_sensor.motion_entrance 
   from: 'on'
