--- a/automations/sensors/light_entrance/movement_triggered.yaml
+++ b/automations/sensors/light_entrance/movement_triggered.yaml
@@ -1,4 +1,5 @@
 alias: Entrada - Encendre llum amb moviment
+initial_state: false
 trigger:
 - entity_id: binary_sensor.motion_entrance 
   from: 'off'
